--- a/bd-de-rechupe/src/app/pages/crear-rct/crear-rct.page.html
+++ b/bd-de-rechupe/src/app/pages/crear-rct/crear-rct.page.html
@@ -3,26 +3,27 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/mainmenu"></ion-back-button>
     </ion-buttons>
-    <ion-button color="tertiary" slot="end" (click)="OnCrearReceta()">Crear Receta</ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col size-md="6" ion-align-self-center>
-        <ion-card>
-          <ion-card-content>
-            <ion-list>
+  <form #form="ngForm" (ngSubmit)="OnCrearReceta(form)">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-md="6" ion-align-self-center>
+          <ion-card>
+            <ion-card-content>
               <ion-item>
-                <ion-label position="floating" style="font-size:20px;">Nombre Receta</ion-label>
-                <ion-input #inputnombre ngModel (keyup.enter)="addNombre(inputnombre)"
-                (ionBlur)="addNombre(inputnombre)" color="primary" placeholder="{{ clonerctnombre }}" type="text" pattern="^(?![ .0-9]+$)[a-zA-ZñÑáéíóúÁÉÍÓÚäëïöüÄËÏÖÜ .0-9]{1,}$" minlength="1" maxlength="31"></ion-input>  
+                <ion-label position="floating">Nombre Receta</ion-label>
+                <ion-input placeholder="Nombre" type="text" ngModel required name="nombre" pattern="^(?![ .0-9]+$)[a-zA-ZñÑáéíóúÁÉÍÓÚäëïöüÄËÏÖÜ .0-9]{1,}$" minlength="1" maxlength="31"></ion-input>
               </ion-item>
-            </ion-list>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+              <div class="ion-padding">
+                <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Crear Receta</ion-button>
+              </div>             
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
